bin_PROGRAMS = dvtsframedecimator
dvtsframedecimator_SOURCES = difblocksource.cpp difbuf.cpp dvtsreceiverandfilter.cpp rawdvfilereader.cpp dvtssender.cpp preferences.cpp main.cpp 
dvtsframedecimator_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp RTP.h libdv.h preferences.cpp preferences.h dvtssender.cpp dvtssender.h rawdvfilereader.cpp rawdvfilereader.h dvtsreceiverandfilter.cpp dvtsreceiverandfilter.h difbuf.cpp difbuf.h difblocksource.cpp difblocksource.h README 

INCLUDES= $(all_includes)
 
dvtsframedecimator_LDFLAGS = $(all_libraries) 
                                                                                
